--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,17 +26,11 @@ jobs:
         with:
           go-version: ${{ env.GO_VERSION }}
 
-      - name: dockerhub-login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: ghcr-login
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: traefiker
+          username: philipfreude
           password: ${{ secrets.GHCR_TOKEN }}
 
       - name: Set up QEMU
