--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ jobs:
   release:
     name: Release Process
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
     env:
       GO_VERSION: stable
       CGO_ENABLED: 0
@@ -30,8 +33,8 @@ jobs:
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: philipfreude
-          password: ${{ secrets.GHCR_TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -46,4 +49,4 @@ jobs:
           version: latest
           args: release --clean
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN_REPO }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
