feat: add package rules for grouping Go dependencies

--- a/renovate.json5
+++ b/renovate.json5
@@ -6,4 +6,10 @@
     ':disableRateLimiting',
     ':separateMultipleMajorReleases',
   ],
+  packageRules: [
+    {
+      matchManagers: ['gomod'],
+      groupName: 'go dependencies',
+    },
+  ],
 }
