--- a/renovate.json5
+++ b/renovate.json5
@@ -1,6 +1,7 @@
 {
   $schema: 'https://docs.renovatebot.com/renovate-schema.json',
   configMigration: true,
+  forkProcessing: "enabled",
   extends: [
     'config:recommended',
     ':disableRateLimiting',
