fix: format packageRules for Go dependencies in Renovate configuration

--- a/renovate.json5
+++ b/renovate.json5
@@ -9,7 +9,9 @@
   ],
   packageRules: [
     {
-      matchManagers: ['gomod'],
+      matchManagers: [
+        'gomod',
+      ],
       groupName: 'go dependencies',
     },
   ],
