--- a/renovate.json5
+++ b/renovate.json5
@@ -7,6 +7,9 @@
     ':disableRateLimiting',
     ':separateMultipleMajorReleases',
   ],
+  postUpdateOptions: [
+    "gomodTidy",
+  ],
   packageRules: [
     {
       matchManagers: [
