feat: pin Go version to 1.24.0 and enhance Renovate configuration for Go version updates

--- a/renovate.json5
+++ b/renovate.json5
@@ -15,7 +15,20 @@
       matchManagers: [
         'gomod',
       ],
+      matchDepTypes: ['indirect', 'require'],
       groupName: 'go dependencies',
+    },
+    {
+      matchDatasources: ['docker', 'golang-version'],
+      matchPackageNames: ['golang', 'go'],
+      groupName: 'golang version',
+      groupSlug: 'golang-version',
+    },
+    {
+      matchManagers: ['gomod'],
+      matchDepTypes: ['golang'],
+      groupName: 'golang version',
+      groupSlug: 'golang-version',
     },
   ],
 }
