fix: update package matching rules for golang version in Renovate configuration

--- a/renovate.json5
+++ b/renovate.json5
@@ -19,8 +19,8 @@
       groupName: 'go dependencies',
     },
     {
-      matchDatasources: ['docker', 'golang-version'],
-      matchPackageNames: ['golang', 'go'],
+      matchManagers: ['dockerfile'],
+      matchPackageNames: ['golang'],
       groupName: 'golang version',
       groupSlug: 'golang-version',
     },
