fix: update golang version matching rules and set range strategy in Renovate configuration to update golang version

--- a/renovate.json5
+++ b/renovate.json5
@@ -26,7 +26,8 @@
     },
     {
       matchManagers: ['gomod'],
-      matchDepTypes: ['golang'],
+      matchPackageNames: ['go'],
+      rangeStrategy: 'bump',
       groupName: 'golang version',
       groupSlug: 'golang-version',
     },
