--- a/.github/workflows/go-cross.yml
+++ b/.github/workflows/go-cross.yml
@@ -15,7 +15,6 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [ stable, oldstable ]
         os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
@@ -27,7 +26,7 @@ jobs:
       - name: Set up Go ${{ matrix.go-version }}
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version-file: 'go.mod'
 
       - name: Test
         run: go test -v -cover ./...
