--- a/.github/workflows/go-cross.yml
+++ b/.github/workflows/go-cross.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       # https://github.com/marketplace/actions/setup-go-environment
-      - name: Set up Go ${{ matrix.go-version }}
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version-file: 'go.mod'
