--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,6 @@ jobs:
       contents: write
       packages: write
     env:
-      GO_VERSION: stable
       CGO_ENABLED: 0
 
     steps:
@@ -24,10 +23,10 @@ jobs:
           fetch-depth: 0
 
       # https://github.com/marketplace/actions/setup-go-environment
-      - name: Set up Go ${{ env.GO_VERSION }}
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ env.GO_VERSION }}
+          go-version-file: 'go.mod'
 
       - name: ghcr-login
         uses: docker/login-action@v3
