fix: enable separate minor and patch version updates in Renovate configuration

--- a/renovate.json5
+++ b/renovate.json5
@@ -30,6 +30,8 @@
       rangeStrategy: 'bump',
       groupName: 'golang version',
       groupSlug: 'golang-version',
+      separateMinorPatch: true,
+      separateMultipleMinor: true,
     },
   ],
 }
