fix: enable separate minor and patch version updates in Renovate configuration

--- a/renovate.json5
+++ b/renovate.json5
@@ -23,6 +23,8 @@
       matchPackageNames: ['golang'],
       groupName: 'golang version',
       groupSlug: 'golang-version',
+      separateMinorPatch: true,
+      separateMultipleMinor: true
     },
     {
       matchManagers: ['gomod'],
