fix: enable separate minor and patch version updates in Renovate configuration

--- a/renovate.json5
+++ b/renovate.json5
@@ -24,7 +24,7 @@
       groupName: 'golang version',
       groupSlug: 'golang-version',
       separateMinorPatch: true,
-      separateMultipleMinor: true
+      separateMultipleMinor: true,
     },
     {
       matchManagers: ['gomod'],
