--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,6 @@ jobs:
     name: Main Process
     runs-on: ubuntu-latest
     env:
-      GOLANGCI_LINT_VERSION: v2.1.2
       CGO_ENABLED: 0
 
     steps:
@@ -37,9 +36,9 @@ jobs:
 
       # https://golangci-lint.run/usage/install#other-ci
       - name: Install golangci-lint ${{ env.GOLANGCI_LINT_VERSION }}
-        run: |
-          curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin ${GOLANGCI_LINT_VERSION}
-          golangci-lint --version
+        uses: golangci/golangci-lint-action@v9
+        with:
+          install-only: true
 
       - name: Make
         run: make
