chore: update Renovate configuration with additional options

--- a/renovate.json5
+++ b/renovate.json5
@@ -6,6 +6,9 @@
     'config:recommended',
     ':disableRateLimiting',
     ':separateMultipleMajorReleases',
+    ':configMigration',
+    'abandonments:recommended',
+    'helpers:pinGitHubActionDigestsToSemver',
   ],
   postUpdateOptions: [
     "gomodTidy",
